--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -28,7 +28,7 @@
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>Home</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
-            <span>Downloads:</span>
+            <span>Download Rezonator</span>
             <ul>
               <li><a href="{{ site.github.zip_url }}" class="button">WIN</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">MAC</a></li>
